Implemented basic wall rendering. But walls are a bit off. The coordinates are not quite right

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -88,4 +88,12 @@
     };
 
     background.src = '@Url.Content("~/Content/images/map.jpg")';
+
+    var wall = new Image();
+    
+    wall.onload = function() {
+        gosuArena.sprites.wall = wall;
+    };
+
+    wall.src = '@Url.Content("~/Content/images/wall.png")';
 </script>
