--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -97,4 +97,6 @@
     loadSprite('wallSouth', '@Url.Content("~/Content/images/wall_south.png")');
     loadSprite('wallEast', '@Url.Content("~/Content/images/wall_east.png")');
     loadSprite('wallWest', '@Url.Content("~/Content/images/wall_west.png")');
+    loadSprite('wallCornerLeft', '@Url.Content("~/Content/images/wall_corner_left.png")');
+    loadSprite('wallCornerRight', '@Url.Content("~/Content/images/wall_corner_right.png")');
 </script>
