--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -99,4 +99,5 @@
     loadSprite('wallWest', '@Url.Content("~/Content/images/wall_west.png")');
     loadSprite('wallCornerLeft', '@Url.Content("~/Content/images/wall_corner_left.png")');
     loadSprite('wallCornerRight', '@Url.Content("~/Content/images/wall_corner_right.png")');
+    loadSprite('bot', '@Url.Content("~/Content/images/mech.png")');
 </script>
