--- a/src/GosuArena/GosuArena/Views/Docs/Index.cshtml
+++ b/src/GosuArena/GosuArena/Views/Docs/Index.cshtml
@@ -162,7 +162,25 @@ Your bot interacts with gosuArena through a couple of different events, and thos
             height // The height of the playing field
         }
         angle, // The angle of your bot. A value between 0 and 360 degrees where 0 degrees is south.
-        seenBots, // An array of <a href="#bot-status">bot status</a> objects representing the bots your bots currently can see
+
+        // The direction of the bot is a vector which indicate which direction the bot moved during its
+        // latest round. So, if the bot moved one unit north during the latest round the vector will be { x: 0, y: -1 },
+        // since the positive direction of the y axis is from the top to the bottom of the screen.
+        // If the bot moved both north and west (1 unit each) the vector will be { x: -1, y: -1 }, and if the bot
+        // moved two units east the vector would be { x: 2, y: 0 }.
+        // Since the vector is the total movement vector of the bot during the latest round it can be used 
+        // to determine both in which direction a bot is moving (the angle of the vector) and the speed with 
+        // which it is moving (the length of the vector).
+        direction: {
+            x,
+            y
+        },
+
+        // An array of <a href="#bot-status">bot status</a> objects representing the bots your bot currently can see.
+        // The line of sight of the bot is a thin, straight line from the sight and forward so you can only see bots
+        // on which your bot has aimed its gun.
+        seenBots, 
+
         canFire: function () { ... },  // True if the weapon is ready for firing, false if the weapon is still cooling down
         roundsUntilWeaponIsReady, // The number of rounds remaining until the weapon is ready to fire
 
