Made sure that the bots get initialized with the id from the database

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -51,7 +51,10 @@
         // @bot.Name.ToUpper()
         // A few lines of code have been added to the bot definition, to make it
         // play nice with the framework. The code written by the user can be seen a few lines below
-        gosuArena.initiateBotRegistration("@bot.Name", function() {
+        gosuArena.initiateBotRegistration({
+            id: @bot.Id,
+            name: "@bot.Name"
+        }, function() {
             // Redefine globals
             var window = {};
             var document = {};
