Added possibility to make bot private

--- a/src/GosuArena/GosuArena/Content/Bot/Edit.less
+++ b/src/GosuArena/GosuArena/Content/Bot/Edit.less
@@ -65,7 +65,7 @@ form#script-editor-form {
             border-color: #cecece;
                         
             position: absolute;
-            top: 0;
+            top: 37px;
             left: 0;
             right: 0;
             bottom: 70px;
