--- a/src/GosuArena/GosuArena/Views/Match/Setup.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Setup.cshtml
@@ -19,5 +19,6 @@
 @Html.MatchSetup(new MatchSetupModel
 {
     Title = "Which bots should face each other in combat?",
+    InfoMessage = "Can't find the droids you are looking for? Make sure they have been made public by their authors",
     Bots = Model,
 })
