Added documentation for private bots

--- a/src/GosuArena/GosuArena/Views/Docs/Index.cshtml
+++ b/src/GosuArena/GosuArena/Views/Docs/Index.cshtml
@@ -23,6 +23,7 @@
     <li><a href="#action-queue">Action Queue Object</a></li>
     <li><a href="#coordinate-system">Coordinate System and Angles</a></li>
     <li><a href="#technical-details">Technical Details</a></li>
+    <li><a href="#private-bots">Public and Private Bots</a></li>
 </ul>
 
 <h3 id="getting-started">Getting Started</h3>
@@ -348,6 +349,35 @@ Your bot interacts with gosuArena through a couple of different events, and thos
     GosuArena is structured so that you are free to organize the code within your script in what ever way 
     you feel is best, as long as you call gosuArena.register and pass in an object with a tick property.
 </p>
+
+<h3 id="private-bots">Public and Private Bots</h3>
+
+<p>
+    At times you might want to keep you friends from seeing your bot, such as just before a tournament.
+    This can be done by making your bot private. No other user can see your private bots so they will
+    not be able to study your bot by playing matches against it. On the flip side, you will not be able
+    to play bots written by other users. You will, however, be able to play matches agains the trainer 
+    bots as well as your own bots.
+</p>
+
+<p>
+    Private bots can be very handy when you are working on your secret super tactics, but makes training
+    a little harder, since you can't play against any real enemy bots written by others.
+</p>
+
+<p>
+    To make a bot private go to the edit page for the bot. Above the code editor there is a checkbox 
+    labeled "Make bot avaible for playing with bots written by other players". Uncheck this checkbox
+    and save your bot.
+</p>
+
+<p>
+    To make your bot public again, go to the edit page once again, check the checkbox again and save 
+    the bot. Your bot will now appear in the bot list and you will be able to play matches against 
+    any other public bot.
+</p>
+
+
 
 <p class="conclusion">
     That is just about it. Now go forth and be awesome!
