Added validation to make sure that a player cannot play matches with private bots facing other users public bots

--- a/src/GosuArena/GosuArena/Views/Shared/Error.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/Error.cshtml
@@ -1,5 +1,17 @@
-﻿@{
+﻿@using Microsoft.Ajax.Utilities
+@model string
+
+@{
     ViewBag.Title = "Error";
 }
 
+@section styles {
+    <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.less")" />
+}
+
 <h2>An error occurred :(</h2>
+
+@if (!Model.IsNullOrWhiteSpace())
+{
+    <p>@Model</p>
+}
