--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -86,12 +86,12 @@
         img.src = url;
     }
 
-    loadSprite('background', '@Url.Content("~/Content/images/map.jpg")');
-    loadSprite('wallNorth', '@Url.Content("~/Content/images/wall_north.png")');
-    loadSprite('wallSouth', '@Url.Content("~/Content/images/wall_south.png")');
-    loadSprite('wallEast', '@Url.Content("~/Content/images/wall_east.png")');
-    loadSprite('wallWest', '@Url.Content("~/Content/images/wall_west.png")');
-    loadSprite('wallCornerLeft', '@Url.Content("~/Content/images/wall_corner_left.png")');
-    loadSprite('wallCornerRight', '@Url.Content("~/Content/images/wall_corner_right.png")');
-    loadSprite('bot', '@Url.Content("~/Content/images/mech.png")');
+    loadSprite('background', '@Url.Content("~/Content/images/sprites/map.jpg")');
+    loadSprite('wallNorth', '@Url.Content("~/Content/images/sprites/wall_north.png")');
+    loadSprite('wallSouth', '@Url.Content("~/Content/images/sprites/wall_south.png")');
+    loadSprite('wallEast', '@Url.Content("~/Content/images/sprites/wall_east.png")');
+    loadSprite('wallWest', '@Url.Content("~/Content/images/sprites/wall_west.png")');
+    loadSprite('wallCornerLeft', '@Url.Content("~/Content/images/sprites/wall_corner_left.png")');
+    loadSprite('wallCornerRight', '@Url.Content("~/Content/images/sprites/wall_corner_right.png")');
+    loadSprite('bot', '@Url.Content("~/Content/images/sprites/mech2.png")');
 </script>
