Added documentation about performance measures

--- a/src/GosuArena/GosuArena/Views/Docs/Index.cshtml
+++ b/src/GosuArena/GosuArena/Views/Docs/Index.cshtml
@@ -24,6 +24,7 @@
     <li><a href="#coordinate-system">Coordinate System and Angles</a></li>
     <li><a href="#technical-details">Technical Details</a></li>
     <li><a href="#private-bots">Public and Private Bots</a></li>
+    <li><a href="#game-performance">Game Performance (FPS)</a></li>
 </ul>
 
 <h3 id="getting-started">Getting Started</h3>
@@ -377,7 +378,23 @@ Your bot interacts with gosuArena through a couple of different events, and thos
     any other public bot.
 </p>
 
+<h3 id="game-performance">Game Performance (FPS)</h3>
 
+<p>
+    If the match appears sluggish when watching the bots duke it you can open the developer tools
+    of you browser (F12) and check the logged FPS there. You should ideally be at 60 FPS. If you are
+    running at ~30 FPS and you are running under Windows 7, you might consider checking if your
+    computer running on battery and/or if it is using the "Balanced" power plan. If so, plugging in 
+    the power supply or switching to the "High performance" power plan could improve your game
+    performance significantly.
+</p>
+    
+<p>
+    You can change your power plan settings by clicking the battery icon in the lower right corner
+    of your screen, or typing "Power options" into the start menu.
+</p>
+
+<img src="@Url.Content("~/Content/images/docs/high_performance.png")" alt="High performance power plan under Windows 7 can improve game performance" />
 
 <p class="conclusion">
     That is just about it. Now go forth and be awesome!
