Made the restart button say Start before the game starts

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -30,7 +30,7 @@
     </form>
 
     <menu class="actions">
-        <button id="restartMatch">Restart match</button>
+        <button id="restartMatch" class="btn btn-primary">Start match</button>
         <button id="stopMatch">Stop match</button>
     </menu>
 </div>
