--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="@Url.Content("~/Scripts/lib/knockout/knockout-3.0.0.js")"> </script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/Play/botViewModel.js")"> </script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/Play/matchViewModel.js")"> </script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/Play/matchUI.js")"> </script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/Play/match.js")"> </script>
 }
 
