Added fix timing bug causing match not to start automatically if sprites are loaded before match.js has loaded

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -104,6 +104,7 @@
             
             if (areAllSpritesLoaded()) {
                 gosuArena.events.raiseResourcesLoaded();
+                gosuArena.sprites.isLoaded = true;
             }
         };
 
