Added team ids to the bots

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -54,7 +54,8 @@
         // play nice with the framework. The code written by the user can be seen a few lines below
         gosuArena.initiateBotRegistration({
             id: @bot.Id,
-            name: "@bot.Name"
+            name: "@bot.Name",
+            teamId: @bot.TeamId
         }, function() {
             // Redefine globals
             var window = {};
