Added whats new page

--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                             <li>@Html.NavigationMenuItem("MyProfile", "User", "Profile")</li>
                         }
                         <li>@Html.NavigationMenuItem("Index", "Docs", "Documentation")</li>
+                        <li>@Html.NavigationMenuItem("News", "Docs", "What's new?")</li>
                     </ul>
                 </nav>
 
