--- a/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
@@ -47,7 +47,7 @@
 </form>
 
 <aside id="match-setup" class="col-md-3">
-    @Html.MatchSetup(new MatchSetupModel
+    @Html.QuickMatchSetup(new MatchSetupModel
     {
         Title = "Play training match",
         Bots = ViewBag.TrainingBots,
