--- a/src/GosuArena/GosuArena/Content/GosuArena.less
+++ b/src/GosuArena/GosuArena/Content/GosuArena.less
@@ -148,5 +148,20 @@ h5 {
     font-size: 16px;
 }
 
+.notifications {
+    position: fixed;
+    z-index: 9999;
+    margin: 0 auto 0 auto;
+    width: 600px;
+    bottom: 0;
+    width: 100%;
+    
+
+    .alert {
+        padding: 10px;
+        margin: 0;
+    }
+}
+
 @media only screen and (min-width: 767px) {
 }
