--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -49,11 +49,14 @@
             </div>
         </div>
        
-         <script type="text/javascript" src="@Url.Content("~/Scripts/lib/underscore-min.js")"> </script>
+        <aside id="notificationContainer" class="notifications"></aside>
+
+        <script type="text/javascript" src="@Url.Content("~/Scripts/lib/underscore-min.js")"> </script>
         @Scripts.Render("~/bundles/jqueryvalidation") 
-        @*<script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.js")"> </script>
-        <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.unobtrusive.js")"> </script>*@
+        <script type="text/javascript" src="@Url.Content("~/Content/bootstrap-3.0.3/js/alert.js")"> </script>
+        <script type="text/javascript" src="@Url.Content("~/Content/bootstrap-notify/js/bootstrap-notify.js")"> </script>
         <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/confirmation.js")"> </script>
+        <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/notifications.js")"> </script>
         <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/changetracking.js")"> </script>
     
         @RenderSection("scripts", required: false)
