--- a/src/GosuArena/GosuArena/Views/Docs/News.cshtml
+++ b/src/GosuArena/GosuArena/Views/Docs/News.cshtml
@@ -8,6 +8,18 @@
 
 <h2>What's New?</h2>
 
+<h3>2014-01-21</h3>
+
+<ul>
+    <li>
+        The same bot can now be added multiple times to an FFA match, so that you can play matches agains yourself.
+        This is done by simply clicking the bot's name multiple times on the match setup page.
+    </li>
+    <li>
+        You can now download and upload the source code for your bot through a small REST API. See the docs for more info.
+    </li>
+</ul>
+
 <h3>2014-01-15</h3>
 
 <ul>
