--- a/src/GosuArena/GosuArena/Views/Account/Register.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/Register.cshtml
@@ -23,6 +23,12 @@
             </div>
 
             <div>
+                <label for="Username">Email</label>
+                <input name="Email" type="text" placeholder="E-mail" value="@Model.Email" />
+                @Html.ValidationMessageFor(m => m.Email)
+            </div>
+
+            <div>
                 <label for="Password">Password</label>
                 <input name="Password" type="password" placeholder="Password" value="@Model.Password" />
                 @Html.ValidationMessageFor(m => m.Password)
