Restructured less folder structure and implemented account management page for admins

--- a/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
@@ -5,7 +5,7 @@
 @model GosuArena.Entities.Bot
 
 @section styles {
-    <link rel="stylesheet" href="@Url.Content("~/Content/Bot/Edit.less")" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/Pages/Bot/Edit.less")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/codemirror-3.20/lib/codemirror.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/codemirror-3.20/addon/lint/lint.css")" />
 }
