--- a/src/GosuArena/GosuArena/Views/Docs/News.cshtml
+++ b/src/GosuArena/GosuArena/Views/Docs/News.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section styles {
-    <link rel="stylesheet" href="@Url.Content("~/Content/Docs/Index.less")" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/Pages/Docs/Index.less")" />
 }
 
 <h2>What's New?</h2>
