--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -8,7 +8,7 @@
 
 @section styles
 {
-    <link rel="stylesheet" href="@Url.Content("~/Content/Match/Play.less")" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/Pages/Match/Play.less")" />
 }
 
 @section scripts {
