--- a/src/GosuArena/GosuArena/Views/User/ReadOnlyProfile.cshtml
+++ b/src/GosuArena/GosuArena/Views/User/ReadOnlyProfile.cshtml
@@ -2,7 +2,7 @@
 
 @section styles
 {
-    <link rel="stylesheet" href="@Url.Content("~/Content/User/Profile.less")" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/Pages/User/Profile.less")" />
 }
 
 <h2>Profile for @Model.Username</h2>
