--- a/src/GosuArena/GosuArena/Content/Pages/Account/List.less
+++ b/src/GosuArena/GosuArena/Content/Pages/Account/List.less
@@ -5,14 +5,20 @@ li {
         padding: 10px;
     }
 
+    span {
+        font-size: 12px;
+    }
+
     .username {
-        display: inline-block;
         margin-top: 5px;
-        font-size: 16px;
+        font-size: 18px;
     }
 
     menu {
-        display: inline-block;
         margin: 0;
+    }
+
+    span {
+        display: block;
     }
 }
