Made styling of edit page work better on smaller screen sizes

--- a/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
@@ -25,7 +25,7 @@
 
 <h1>@Model.Name</h1>
 
-<form id="script-editor-form" method="POST" action="@Url.Action("Edit")" role="form" class="change-tracked col-md-9">
+<form id="script-editor-form" method="POST" action="@Url.Action("Edit")" role="form" class="change-tracked col-md-9 col-sm-9 col-xs-9">
     
     @Html.AntiForgeryToken()
 
@@ -46,7 +46,7 @@
     </fieldset>
 </form>
 
-<aside id="match-setup" class="col-md-3">
+<aside id="match-setup" class="col-md-3 col-sm-3 col-xs-3">
     @Html.QuickMatchSetup(new MatchSetupModel
     {
         Title = "Play training match",
