--- a/src/GosuArena/GosuArena/Views/Shared/QuickMatchSetup.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/QuickMatchSetup.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.Ajax.Utilities
-@model GosuArena.Models.Controls.MatchSetupModel
+@model GosuArena.Models.Controls.QuickMatchSetupModel
 
 <h2>@Model.Title</h2>
 
